small edit to microhabitat label

--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -690,7 +690,7 @@ To determine whether the flexibility manipulation has influenced the ability of 
 
 We will track baseline behavior and changes after the flexibility manipulation via spatial movement tracking that lasts for 60 min, noting the GPS location and the jay’s behavior at 1 minute intervals. During tracks, we document all occurrences of microhabitats used within the territory (see below), foraging (see below), and breeding behaviors of the focal individual, if it is the breeding season [@altmann1974observational]. The minimum sample size will be 20 individuals with a minimum of 4 tracks per individual (at least 2 per month) pre-manipulation and a minimum of 4 tracks per individual (at least 2 per month) post-manipulation (at least 352 tracks in total). These data will allow us to detect any pre- and post-manipulation within-individual differences in space use, diversity of habitat use, and foraging breadth.
 
-Microhabitat types in the suburban habitat include: human structure, native vegetation, non-native vegetation, grass, cement and dirt. In the natural habitat, microhabitat types include all previous categories, but not human structure or cement. All categories can be further defined by whether the subject was high (>3m) or low (<3m).
+Microhabitat types in the suburban habitat include: vertical human structure (e.g. building, bench), native vegetation, non-native vegetation, grass, cement and dirt. In the natural habitat, microhabitat types include all previous categories, but not human structure or cement. All categories can be further defined by whether the subject was high (>3m) or low (<3m).
 
 Food types are broken down into plant (seed, fruit, human-provided, or unknown plant) and animal (insect larva, adult insect, amphibian, reptile, mammal, bird, egg, human-provided, or unknown animal).
 
